# Multi-Agent-Workflow

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
evals/: README.md  corpus.json  run_eval.py
examples/: batch_campaigns.json
src/: config.py  llm_client.py  workflow.py
src/agents/: art_director_agent.py  copywriter_agent.py  manager_agent.py  research_agent.py
src/campaign_forge/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  llm.py  loaders.py  logging_config.py  models.py  parsing.py  workflow.py
src/campaign_forge/agents/: __init__.py  art_director.py  base.py  copywriter.py  manager.py  research.py
tests/: conftest.py  test_agents.py  test_cli.py  test_config.py  test_llm.py  test_loaders.py  test_models.py  test_parsing.py  test_workflow.py
