[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "campaign-forge"
dynamic = ["version"]
description = "A production-grade multi-agent workflow that turns a product brief into a complete marketing campaign."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Syed Waleed Ahmed" }]
keywords = [
    "ai",
    "agents",
    "multi-agent",
    "llm",
    "marketing",
    "workflow-automation",
    "groq",
    "openai",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "openai>=1.30",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "tenacity>=8.2",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/syed-waleed-ahmed/multi_agent_workflow"
Repository = "https://github.com/syed-waleed-ahmed/multi_agent_workflow"
Issues = "https://github.com/syed-waleed-ahmed/multi_agent_workflow/issues"

[project.scripts]
campaign-forge = "campaign_forge.cli:main"

[tool.setuptools.dynamic]
version = { attr = "campaign_forge.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
campaign_forge = ["py.typed"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["campaign_forge"]

[tool.mypy]
python_version = "3.10"
packages = ["campaign_forge"]
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["campaign_forge"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
